--- a/main.css
+++ b/main.css
@@ -1379,7 +1379,7 @@
   top: 0;
   width: 250px;
   height: 250px;
-  background: url("") no-repeat;
+  background: url("https://i.imgur.com/jTpFJuI.png") no-repeat;
   background-size: 100%;
 }
 :root .app-1q1i1E::after {
@@ -1388,7 +1388,7 @@
   bottom: 0;
   width: 490px;
   height: 40px;
-  background: url("") no-repeat;
+  background: url("https://i.imgur.com/KQQWcTY.png") no-repeat;
   background-size: 100%;
 }
 :root .app-2rEoOp::before {
@@ -1396,7 +1396,7 @@
   right: 116px;
   width: 200px;
   height: 120px;
-  background: url("") no-repeat;
+  background: url("https://i.imgur.com/0nsnP69.png") no-repeat;
   background-size: 100%;
 }
 :root .app-2rEoOp::after {
@@ -1404,7 +1404,7 @@
   right: 45%;
   width: 40px;
   height: 40px;
-  background: url("");
+  background: url("https://i.imgur.com/OBSWYht.png");
   background-size: 100%;
 }
 :root .layers-3iHuyZ::before {
@@ -1413,7 +1413,7 @@
   right: 0;
   width: 20px;
   height: 50px;
-  background: url("") no-repeat;
+  background: url("https://i.imgur.com/WveiFXb.png") no-repeat;
   background-size: 100%;
 }
 :root .layers-3iHuyZ::after {
@@ -1421,7 +1421,7 @@
   right: 100px;
   width: 25px;
   height: 25px;
-  background: url("") no-repeat;
+  background: url("https://i.imgur.com/WBUag7e.png") no-repeat;
   background-size: 100%;
 }
 :root .bg-h5JY_x::after {
@@ -1429,7 +1429,7 @@
   right: 385px;
   width: 30px;
   height: 30px;
-  background: url("") no-repeat;
+  background: url("https://i.imgur.com/aOYvahh.png") no-repeat;
   background-size: 100%;
 }
 :root .bg-h5JY_x::before {
@@ -1438,7 +1438,7 @@
   right: 430px;
   width: 30px;
   height: 40px;
-  background: url("") no-repeat;
+  background: url("https://i.imgur.com/JMoXBIs.png") no-repeat;
   background-size: 100%;
 }
 
@@ -1654,7 +1654,7 @@
   }
 
   .container-2lgZY8::after {
-    content: "PP PooPoo ❤";
+    content: "Ur mom gey ❤";
     position: fixed;
     top: 220px;
     bottom: 85px;
