--- a/lilypichu.theme.css
+++ b/lilypichu.theme.css
@@ -5,7 +5,7 @@
 * @invite rtBQX5D3bD
 * @version 1.0
 */
-@import url("https://nyri4.github.io/LilyPichu/main.css");
+@import url("https://github.com/aerimcahill/LilyPichu.git");
 
 :root {
 
